# adb-mcp

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
adb_mcp/: __init__.py  core.py  server.py
adb_mcp/tools/: __init__.py  apps.py  device.py  files.py  input.py  logs.py  media.py  network.py  system.py  ui.py
examples/: mcp.json
tests/: test_smoke.py
